--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   socket_io_client: ^3.1.1
   provider: ^6.0.5
   flutter_dotenv: ^5.0.2
+  string_validator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
