--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - turkce_kelime_listesi.txt
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
